# chat-app-nodejs

./: Dockerfile  README.md
app/: .env  docker-compose.yml  example.env
app/backend/: Dockerfile
app/backend-rust/: Dockerfile
app/backend-rust/app/: Cargo.toml
app/backend-rust/app/src/: db.rs  main.rs  msg.rs  server.rs
app/backend-rust/app/src/dbimpl/: postgres.rs
app/backend/app/: app.js  database.js  package.json
app/backend/flask/: app.py
app/flask-api/: app.py
app/frontend/: Dockerfile  nginx.conf
app/frontend/js/: submit_message.js
app/frontend/page/: index.html
app/frontend/page/css/: global_vars.css  style.css  switch.css
app/frontend/page/js/: colorschemes.js  fetch_messages.js  index.js  main.js
app/page/: index.html
