[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
openssl = { version = "0.10", features = ["vendored"] }

[features]

postgres = []

default = ["postgres"]
